--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,9 @@
-<p>
-  home works!
-</p>
+<div class="list-items">
+  <div class="list-item" *ngFor="let item of products">
+    <spa-item
+      [name]="item.comp_name"
+      [currency]="item.description"
+      [price]="item.price"
+    ></spa-item>
+  </div>
+</div>
