--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,3 +1,17 @@
-<div>
-  <a [routerLink]="['login']">Login </a>
-</div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <!-- <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarTogglerDemo01"
+    aria-controls="navbarTogglerDemo01"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+  </button> -->
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+    <form class="form-inline my-2 my-lg-0">
+      <a class="btn" [routerLink]="['login']">Login</a>
+    </form>
+  </div>
+</nav>
