--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,1 @@
-<div class="list-items">
-  
- <!--  <div class="list-item" *ngFor="let item of products">
-    <spa-item
-      [name]="item.comp_name"
-      [currency]="item.description"
-      [price]="item.price"
-    ></spa-item>
-  </div> -->
-</div>
+<p>home</p>
