--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -1,3 +1,43 @@
-<p>
-  login works!
-</p>
+<div class="container pt-3">
+  <div class="row justify-content-sm-center">
+    <div class="col-sm-6 col-md-4">
+      <div class="card border-info text-center">
+        <div class="card-header">
+          Sign in to continue
+        </div>
+        <div class="card-body">
+          <form
+            class="form-signin"
+            [formGroup]="loginForm"
+            (ngSubmit)="login(loginForm)"
+          >
+            <input
+              type="text"
+              class="form-control mb-2"
+              placeholder="Email"
+              formControlName="userName"
+              required
+              autofocus
+            />
+            <input
+              type="password"
+              class="form-control mb-2"
+              placeholder="Password"
+              formControlName="password"
+              required
+            />
+            <button class="btn btn-lg btn-primary btn-block mb-1" type="submit">
+              Sign in
+            </button>
+            <label class="checkbox float-left">
+              <input type="checkbox" value="remember-me" />
+              Remember me
+            </label>
+            <a href="#" class="float-right">Need help?</a>
+          </form>
+        </div>
+      </div>
+      <a href="#" class="float-right">Create an account </a>
+    </div>
+  </div>
+</div>
