Header & Footer UI design completed

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <div *ngFor="let item of products">
     name:
     <input
@@ -14,4 +14,10 @@
     />
     total:<input type="text" value="" readonly />
   </div>
+</div> -->
+<div class="container">
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid a maxime nulla! Veniam, nemo vero 
+  illum consequatur, fuga repellendus rem explicabo repudiandae reiciendis harum cum nam ducimus obcaecati 
+  dignissimos? Modi!
+  </p>
 </div>
