--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,54 @@
-<p>
-  footer works!
-</p>
+<footer class="footer-widget">
+  <div class="container">
+    <div class="data">
+      <div class="row">
+        <div class="col-sm-4">
+          <img src="assets/logo1.png">
+            <p class="company-desc">Duis semper mauris vitae purus rhoncus suscipit. Nunc dictum dapibus tellus, at viverra risus 
+              pharetra id. Nulla facilisi. Ut mollis et augue non gravida.
+            </p>
+            <a href="#">
+              <i class="icon-social-twitter"></i>
+            </a>
+            <a href="#">
+                <i class="icon-social-twitter"></i>
+            </a>
+            <a href="#">
+                <i class="icon-social-twitter"></i>
+            </a>
+        </div>
+        <div class="col-sm-4">
+          <h3 class="widget-title">Recent Posts</h3>
+          <img class="image1" src="assets/image.jpg">
+          <hr>
+          <img class="image1" src="assets/image.jpg">
+          <hr>
+          <img class="image1" src="assets/image.jpg">
+        </div>
+        <div class="col-sm-4">
+          <h3 class="widget-title">Latest Projects</h3>
+          <div class="row">
+            <div class="col-sm-4">
+              <img class="image2" src="assets/image.jpg">
+            </div>
+            <div class="col-sm-4">
+                <img class="image2" src="assets/image.jpg">
+            </div>
+            <div class="col-sm-4">
+                <img class="image2" src="assets/image.jpg">
+            </div>
+            <div class="col-sm-4">
+                <img class="image2" src="assets/image.jpg">
+            </div>
+            <div class="col-sm-4">
+              <img class="image2" src="assets/image.jpg">
+            </div>
+            <div class="col-sm-4">
+              <img class="image2" src="assets/image.jpg">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
