--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid header-widget">
   <nav class="navbar navbar-expand-lg">
     <a href="#" class="navbar navbar-brand">
       <img src="assets/logo.png">
@@ -7,26 +7,24 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="menu">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Gallery</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Team</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Partners</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contacts</a>
-            </li>
-          </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item dropdown">
+          <img src="assets/user.jpg" alt="image" class="user-image">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-target="dropdown_target" href="#">
+            USER
+          </a>
+          <div class="dropdown-menu dropdown-menu-left drop1" aria-labelledby="dropdown_target">
+            <a class="dropdown-item" href="#">Link1</a>
+            <hr>
+            <a class="dropdown-item" href="#">Link2</a>
+            <hr>
+            <a class="dropdown-item" href="#">Link3</a>
+          </div>
+        </li>
+      </ul>
     </div>
   </nav>
 </div>
