--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -9,7 +9,7 @@
           <form
             class="form-signin"
             [formGroup]="loginForm"
-            (ngSubmit)="login(loginForm)"
+            (ngSubmit)="login()"
           >
             <input
               type="text"
