--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,27 +1,42 @@
 <div class="container-fluid header-widget">
   <nav class="navbar navbar-expand-lg">
-    <a href="#" class="navbar navbar-brand">
-      <img src="assets/logo.png">
-    </a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#menu">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="menu">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" [routerLink]="['home']">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['login']">SignIn</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['home']">SignUp</a>
         </li>
         <li class="nav-item dropdown">
-          <img src="assets/user.jpg" alt="image" class="user-image">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-target="dropdown_target" href="#">
+          <img src="assets/user.jpg" alt="image" class="user-image" />
+          <a
+            class="nav-link dropdown-toggle"
+            data-toggle="dropdown"
+            data-target="dropdown_target"
+            href="#"
+          >
             USER
           </a>
-          <div class="dropdown-menu dropdown-menu-left drop1" aria-labelledby="dropdown_target">
-            <a class="dropdown-item" href="#">Link1</a>
-            <hr>
-            <a class="dropdown-item" href="#">Link2</a>
-            <hr>
-            <a class="dropdown-item" href="#">Link3</a>
+          <div
+            class="dropdown-menu dropdown-menu-left drop1"
+            aria-labelledby="dropdown_target"
+          >
+            <a class="dropdown-item" [routerLink]="['user']">profile</a>
+            <hr />
+            <a class="dropdown-item" [routerLink]="['user/myOrders']"
+              >MyOrders</a
+            >
+            <hr />
+            <button class="dropdown-item" (click)="logout()">
+              LogOut
+            </button>
           </div>
         </li>
       </ul>
