login and signUp validations completed

--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="container pt-3">
-  <div class="row justify-content-sm-center">
+  <div class="row justify-content-sm-center login">
     <div class="col-sm-6 col-md-4">
       <div class="card border-info text-center">
         <div class="card-header">
@@ -11,22 +11,39 @@
             [formGroup]="loginForm"
             (ngSubmit)="login()"
           >
-            <input
-              type="text"
-              class="form-control mb-2"
-              placeholder="Email"
-              formControlName="userName"
-              required
-              autofocus
-            />
-            <input
-              type="password"
-              class="form-control mb-2"
-              placeholder="Password"
-              formControlName="password"
-              required
-            />
-            <button class="btn btn-lg btn-primary btn-block mb-1" type="submit">
+            <div class="form-group">
+              <input
+                type="text"
+                class="form-control mb-2"
+                placeholder="Email or Phone"
+                formControlName="userName"
+                [ngClass]="{
+                  'is-invalid img':
+                    loginForm.get('userName').touched &&
+                    loginForm.get('userName').invalid
+                }"
+              />
+              <div class="invalid-feedback invalid-txt">
+                Email or PhoneNumber is required
+              </div>
+            </div>
+            <div class="form-group">
+              <input
+                type="password"
+                class="form-control mb-2"
+                placeholder="Password"
+                formControlName="password"
+                [ngClass]="{
+                  'is-invalid img':
+                    loginForm.get('password').touched &&
+                    loginForm.get('password').invalid
+                }"
+              />
+              <div class="invalid-feedback invalid-txt">
+                Password is required
+              </div>
+            </div>
+            <button class="btn btn-lg btn-primary btn-block mb-1" type="submit" [disabled]="loginForm.invalid">
               Sign in
             </button>
             <label class="checkbox float-left">
@@ -37,7 +54,7 @@
           </form>
         </div>
       </div>
-      <a href="#" class="float-right">Create an account </a>
+      <a class="float-right" [routerLink]="['/signUp']">Create an account </a>
     </div>
   </div>
 </div>
