--- a/src/app/shared/signup/signup.component.scss
+++ b/src/app/shared/signup/signup.component.scss
@@ -1,13 +1,13 @@
 .card {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
-.login {
-  margin-top: 100px;
-  margin-bottom: 100px;
+.signUp {
+  margin-top: 10px;
+  margin-bottom: 30px;
 }
 .img {
   background-image: unset;
 }
-.invalid-txt {
+.invalid-txt{
   text-align: justify;
 }
