--- a/src/app/user-layout/user-layout.component.scss
+++ b/src/app/user-layout/user-layout.component.scss
@@ -1,11 +1,11 @@
-sidenav-wrapper {
+.sidenav-wrapper {
   position: absolute;
   width: 240px;
   height: 100vh;
   top: 0px;
   z-index: 20;
   padding-top: 70px;
-  background: #fff;
+  background: #1f2a2c;
   box-shadow: 1px 0px 20px rgba(0, 0, 0, 0.08);
   // @include mobile {
   //   width: 70px;
