--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -8,13 +8,13 @@
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['home']">Home</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="!isShowhide">
           <a class="nav-link" [routerLink]="['login']">SignIn</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="['home']">SignUp</a>
+        <li class="nav-item" *ngIf="!isShowhide">
+          <a class="nav-link" [routerLink]="['signUp']">SignUp</a>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown" *ngIf="isShowhide">
           <img src="assets/user.jpg" alt="image" class="user-image" />
           <a
             class="nav-link dropdown-toggle"
