--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -8,6 +8,9 @@
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['home']">Home</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['cart']">Cart</a>
+        </li>
         <li class="nav-item" *ngIf="!isShowhide">
           <a class="nav-link" [routerLink]="['login']">SignIn</a>
         </li>
