Added carousel in home component

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer-widget">
-  <div class="container">
+  <div class="container-fluid">
     <div class="data">
       <div class="row">
         <div class="col-sm-4">
@@ -19,33 +19,56 @@
         </div>
         <div class="col-sm-4">
           <h3 class="widget-title">Recent Posts</h3>
-          <img class="image1" src="assets/image.jpg">
-          <hr>
-          <img class="image1" src="assets/image.jpg">
-          <hr>
-          <img class="image1" src="assets/image.jpg">
+          <div class="image-text">
+            <div>
+              <img src="assets/image.jpg">
+            </div>
+            <div class="text">
+              <p>Computer & Table</p>
+              <P class="footer-text">Macsof Technologies</P>
+            </div>
+          </div>
+          <div class="image-text">
+              <div>
+                <img src="assets/image.jpg">
+              </div>
+              <div class="text">
+                <p>Computer & Table</p>
+                <P class="footer-text">Macsof Technologies</P>
+              </div>
+            </div>
+            <div class="image-text">
+                <div>
+                  <img src="assets/image.jpg">
+                </div>
+                <div class="text">
+                  <p>Computer & Table</p>
+                  <P class="footer-text">Macsof Technologies</P>
+                </div>
+              </div>
         </div>
         <div class="col-sm-4">
           <h3 class="widget-title">Latest Projects</h3>
           <div class="row">
-            <div class="col-sm-4">
-              <img class="image2" src="assets/image.jpg">
+            <div>
+              <img class="footer-image" src="assets/image.jpg">
             </div>
-            <div class="col-sm-4">
-                <img class="image2" src="assets/image.jpg">
+            <div>
+                <img class="footer-image" src="assets/image.jpg">
             </div>
-            <div class="col-sm-4">
-                <img class="image2" src="assets/image.jpg">
+            <div>
+                <img class="footer-image" src="assets/image.jpg">
             </div>
-            <div class="col-sm-4">
-                <img class="image2" src="assets/image.jpg">
+            <div>
+              <img class="footer-image" src="assets/image.jpg">
             </div>
-            <div class="col-sm-4">
-              <img class="image2" src="assets/image.jpg">
+            <div>
+                <img class="footer-image" src="assets/image.jpg">
             </div>
-            <div class="col-sm-4">
-              <img class="image2" src="assets/image.jpg">
+            <div>
+                <img class="footer-image" src="assets/image.jpg">
             </div>
+            
           </div>
         </div>
       </div>
