--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -3,7 +3,9 @@
     <div class="data">
       <div class="row">
         <div class="col-sm-4">
-          <img src="assets/logo1.png">
+            <a class="#" class="navbar navbar-brand logo-text">
+              <h2>Order Management</h2>
+            </a>
             <p class="company-desc">Duis semper mauris vitae purus rhoncus suscipit. Nunc dictum dapibus tellus, at viverra risus 
               pharetra id. Nulla facilisi. Ut mollis et augue non gravida.
             </p>
