--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -12,9 +12,9 @@
     color:#ffffff;
 }
 
-.company-desc {
-    margin-top:22px;
-}
+// .company-desc {
+//     margin-top:22px;
+// }
 
 .image-text img {
     height:70px;
