--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,4 +1,77 @@
+.carouesl1 {
+    padding: 0px !important;
+}
 .carousel-inner img {
     height:100%;
     width:100%;
+}
+
+.carousel-inner .carousel-item img {
+    width:100%;
+    height:400px;
+}
+
+.cement-widget {
+    margin-top:10px;
+}
+
+.cement-widget  {
+    padding-bottom:25px;
+}
+
+.cement-widget h2 {
+    margin-bottom: 15px;
+}
+
+.cement-showcase  {
+    margin-bottom:20px;
+    text-align: center;
+    padding: 10px;
+    /* box-shadow: 0px 2px 5px 0px; */
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.12);
+    margin: 0 8px;
+}
+
+.cement-showcase img {
+    height:125px;
+    width:125px;
+}
+
+
+.cement-price {
+    // justify-content:center;
+    display: flex;
+}
+
+.cement-price p {
+    margin:5px;
+    padding:0px 15px 0px 0px;
+}
+
+.cement-price1 {
+    // justify-content:center;
+    display: flex;
+}
+
+.cement-price1 p{
+    margin-right:15px;
+}
+
+.cement-price1 input {
+    height:32px;
+    width:42px;
+}
+
+.cement-price1 .cement-input {
+    width:100px;
+}
+.cart-btn {
+    background-color: #34e65d;
+    color: #ffffff;
+    padding: 8px 13px;
+    border-radius: 15px;
+}
+
+.cement-widget textarea {
+    resize:none;
 }
