--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,8 @@
 <div class="container-fluid header-widget">
   <nav class="navbar navbar-expand-md">
+    <a class="#" class="navbar navbar-brand logo-text">
+      <h2>Order Management</h2>
+    </a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#menu">
       <span class="navbar-toggler-icon"></span>
     </button>
