--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -11,6 +11,11 @@
             [formGroup]="loginForm"
             (ngSubmit)="login()"
           >
+            <div *ngIf="isError">
+              <div class="error-message">
+                {{ errorMessage }}
+              </div>
+            </div>
             <div class="form-group">
               <input
                 type="text"
@@ -43,7 +48,11 @@
                 Password is required
               </div>
             </div>
-            <button class="btn btn-lg btn-primary btn-block mb-1" type="submit" [disabled]="loginForm.invalid">
+            <button
+              class="btn btn-lg btn-primary btn-block mb-1"
+              type="submit"
+              [disabled]="loginForm.invalid"
+            >
               Sign in
             </button>
             <label class="checkbox float-left">
