--- a/src/app/user-layout/profile/profile.component.html
+++ b/src/app/user-layout/profile/profile.component.html
@@ -1,3 +1,84 @@
-<p>
-  profile works!
-</p>
+<div class="container">
+  <div class="profile">
+    <div class="heading">
+       <h2>Profile</h2>
+  </div>
+    <div class="col-sm-12">
+      <div class="row">
+        <form [formGroup]="profileForm" (ngSubmit)="update()">
+          <div class="form-row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>ShopName</label>
+                <input
+                  class="form-control"
+                  type="text"
+                  formControlName="shop_name"
+                />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>OwnerName</label>
+                <input
+                  class="form-control"
+                  type="text"
+                  formControlName="owner_name"
+                />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>GST Number</label>
+                <input
+                  class="form-control"
+                  type="text"
+                  formControlName="gst_number"
+                />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>MobileNumber</label>
+                <input
+                  class="form-control"
+                  formControlName="mobile_number"
+                  readonly
+                />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>Email</label>
+                <input class="form-control" formControlName="email" readonly />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>Address</label>
+                <input
+                  class="form-control"
+                  type="text"
+                  formControlName="address"
+                />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>PinCode</label>
+                <input
+                  class="form-control"
+                  type="text"
+                  formControlName="pincode"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="update-btn">
+            <button class="btn btn-md btn-primary" type="submit">update</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
